# scriptmaker

./: .gitignore  README.md  pyproject.toml
data/: exceptions.json  exceptions.yml  patches.json  physicalreminders.json  upstream-meta.json  upstream.json
data/characters/_meta/: DAWN.yml  DEMON.yml  MINION.yml  _meta.yml  demoninfo.yml  dusk.yml  fabled.yml  loric.yml  minioninfo.yml  outsider.yml  townsfolk.yml  traveller.yml
data/characters/demon/: alhadikhia.yml  fanggu.yml  imp.yml  kazali.yml  legion.yml  leviathan.yml  lilmonsta.yml  lleech.yml  lordoftyphon.yml  nodashii.yml  ojo.yml  po.yml  pukka.yml  riot.yml  shabaloth.yml  vigormortis.yml  vortox.yml  yaggababble.yml  zombuul.yml
data/characters/fabled/: angel.yml  buddhist.yml  deusexfiasco.yml  djinn.yml  doomsayer.yml  duchess.yml  ferryman.yml  fibbin.yml  fiddler.yml  hellslibrarian.yml  revolutionary.yml  sentinel.yml  spiritofivory.yml  toymaker.yml
data/characters/loric/: tor.yml  (+6 more)
scriptmaker/: __init__.py  __main__.py  constants.py
scriptmaker/data/: __init__.py  datastore.py  icon.py
scriptmaker/models/: __init__.py  character.py  jinx.py  script.py
scriptmaker/renderer/: __init__.py  renderer.py  tokenizer.py
scriptmaker/templates/: __init__.py  character-tokens-38.css  character-tokens.jinja  common.css  nightorder-full.jinja  nightorder-simple.jinja  nights.css  nights.jinja  reminder-tokens-19.css  reminder-tokens.jinja  script.css  script.jinja  style.css  tokens.css  tokens.jinja
scriptmaker/utilities/: __init__.py  error.py  filesystem.py  kwarg.py  pdftools.py  sanitize.py
(+141 files in other folders)
